--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
       <!-- play ground start-->
       <section id="play-ground" class="hidden">
-        <div class="flex flex-col items-center gap-10 ">
+        <div class="flex flex-col items-center gap-10">
           <div
             class="artboard artboard-horizontal phone-6 border-[20px] border-[#010313CC] bg-[#FFFFFFB3] mt-10"
           >
@@ -43,7 +43,12 @@
                 Don't watch while playing....
               </p>
             </div>
-            <p id="current-alphabet" class="text-black text-8xl text-center mt-10 uppercase">Y</p>
+            <p
+              id="current-alphabet"
+              class="text-black text-8xl text-center mt-10 uppercase"
+            >
+              Y
+            </p>
           </div>
           <!-- keyboard start -->
           <div>
@@ -122,11 +127,19 @@
       </section>
       <!-- score field End -->
       <!-- Final Score Start -->
-      <section class="score flex justify-center items-center min-h-screen hidden ">
-        <div class="text-white space-y-7 text-center bg-[#FFFFFF33] p-4 rounded-lg ">
-            <h2 class="text-8xl font-extrabold">Score :<span>0</span></h2>
-            <p>Practice makes you a Pro</p>
-            <button class="btn">Play Again</button>
+      <section
+        id="final-score"
+        class="flex justify-center items-center min-h-screen hidden"
+      >
+        <div
+          class="text-white space-y-7 text-center bg-[#FFFFFF33] p-4 rounded-lg"
+        >
+          <h2 class="text-4xl">Game Over</h2>
+          <h2 class="text-8xl font-extrabold">
+            Score :<span id="my-score">0</span>
+          </h2>
+          <p>Practice makes you a Pro</p>
+          <button onclick="play()" class="btn">Play Again</button>
         </div>
       </section>
     </main>
